    * 1401 FIX: Display options in views are now again persistent...

    WATO:
    * 1096 New WATO webservices: manage hosts via webinterface...
    * 1155 NagVis map edit/view permissions can now be set using roles/groups...
    * 1115 Renamed rule: Hosts using SNMP v2c -> Legacy SNMP devices using SNMP v2c...
    * 1064 FIX: Fixed rare issue with WATO communication in distributed setups (different OS versions)...
    * 1089 FIX: Snapshot restore: fixed exception during exception handling......
    * 1091 FIX: logwatch patterns: allow unicode text in pattern comment
    * 1092 FIX: logwatch: now able to enter unicode text into the "Pattern (Regex)" field
    * 0191 FIX: Added swp files to the ignore list for the WATO git feature...
    * 1153 FIX: Changed custom user attributes can now be used immediately...
    * 0201 FIX: Fixed error message in Rulelist of RBN...
    * 1100 FIX: WATO backup domains: fixed bug were excluded files still got deleted on snapshot restore...
    * 1101 FIX: WATO check parameter: renamed 'Nominal Voltages' to 'Voltage Levels..'
    * 1396 FIX: Fix default setting of Enable sounds in views...
    * 1109 FIX: WATO active checks: passwords no longer shown as plain text....

    Notifications:
    * 1151 Add variables (HOST/SERVICE)ACK(AUTHOR/COMMENT) to notification context...
    * 1394 HTML notifications have a new content field for debugging variables...
    * 1400 Added example notification script for Pushover to doc/treasures/notifications...
    * 1156 FIX: Graphs in HTML mails are now sent again where they where missing...
    * 1157 FIX: Fixed SMS plugin on at least debian (distrs which have no sendsms/smssend)...

    Event Console:
    * 1148 Allow execution of actions when cancelling events...
    * 1395 Event Console can now create notifications via Check_MK RBN...
    * 1007 FIX: check_mkevents: fix case where events contain binary zeroes
    * 1399 FIX: Fix left-over tac processes when showing Event Console history...