@@ -114,6 +114,7 @@
     * 1096 New WATO webservices: manage hosts via webinterface...
     * 1155 NagVis map edit/view permissions can now be set using roles/groups...
     * 1115 Renamed rule: Hosts using SNMP v2c -> Legacy SNMP devices using SNMP v2c...
+    * 1404 Make title/help of custom user attributes localizable...
     * 1064 FIX: Fixed rare issue with WATO communication in distributed setups (different OS versions)...
     * 1089 FIX: Snapshot restore: fixed exception during exception handling......
     * 1091 FIX: logwatch patterns: allow unicode text in pattern comment
